# LoraWan-optimization

./: ADR_results.py  CMakeLists.txt  adr_results.csv  adr_scenarios.csv  data_analysis.py  data_analysis_surrogate.py  fff  final_results.csv  global_results.csv  main.py  metaheuristics.py  optimization.py  plot_convergence_rate.py  random_forest_global_results.csv  run_simulation.py  scenarios.csv  statistical_test.py  surrogateGA.py  surrogateRFGA.py  surrogate_global_results.csv
results/: results_summary.csv  scenario100_all_mean_convergence_curves.txt  scenario101_all_mean_convergence_curves.txt  scenario102_all_mean_convergence_curves.txt  scenario103_all_mean_convergence_curves.txt  scenario104_all_mean_convergence_curves.txt  scenario105_all_mean_convergence_curves.txt  scenario106_all_mean_convergence_curves.txt  scenario107_all_mean_convergence_curves.txt  scenario108_all_mean_convergence_curves.txt  scenario109_all_mean_convergence_curves.txt  scenario10_all_mean_convergence_curves.txt  scenario110_all_mean_convergence_curves.txt  scenario111_all_mean_convergence_curves.txt  scenario112_all_mean_convergence_curves.txt  scenario113_all_mean_convergence_curves.txt  scenario114_all_mean_convergence_curves.txt  scenario115_all_mean_convergence_curves.txt  scenario116_all_mean_convergence_curves.txt  scenario117_all_mean_convergence_curves.txt  scenario118_all_mean_convergence_curves.txt  scenario119_all_mean_convergence_curves.txt  scenario11_all_mean_convergence_curves.txt  scenario120_all_mean_convergence_curves.txt  scenario121_all_mean_convergence_curves.txt  (+476 more)
